--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,54 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+	padding: 0;
+	margin: 0;
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 400;
+	color:#363e4a;
+    // background-color: #f7f9fd;
+    background: #ebf1fa;
+}
+p,span,h1,h2,h3{
+	font-family:  'Montserrat', sans-serif;
+}
+* {
+	box-sizing: border-box;
+}
+
+ul, li {
+	display: block;
+	padding: 0;
+	margin: 0;
+}
+
+h1, h2, h3, h4, h5, h6 span{
+	padding: 0;
+	margin: 0;
+	font-weight: 400;
+	line-height: 1.46em;
+}
+
+p {
+	margin: 0;
+	line-height: 1.48em;
+	font-weight: 300;
+}
+
+a {
+	text-decoration: none;
+	color:#363e4a;
+	&:hover{
+		color:#07b5e3;
+		transition:color 0.3s ease;
+	}
+}
+.container{
+    margin: 0 auto;
+    width: 85%;
+}
+.btn{
+	display: block;
+    background: transparent;
+    border: none;
+	cursor: pointer;
+}
