--- a/src/app/shared/components/main-layout/main-layout.component.html
+++ b/src/app/shared/components/main-layout/main-layout.component.html
@@ -2,8 +2,12 @@
     <h1>Angular Dashboard</h1>
     <nav>
         <ul class="nav">
-            <li><a routerLink="/">Home</a></li>
-            <li><a href="#">Link</a></li>
+            <li routerLinkActive="active">
+                <a routerLink="/">Home</a>
+            </li>
+            <li routerLinkActive="active">
+                <a href="/board/12">Link</a>
+            </li>
             <li><a href="#">Link</a></li>
         </ul>
     </nav>
