added modal - dashboard

--- a/src/app/dashboard-page/dashboard-page.component.html
+++ b/src/app/dashboard-page/dashboard-page.component.html
@@ -1,4 +1,9 @@
-<div class="dashboard">
+<div class="dashboard">   
+    <div class="add-dashboard">
+        <button 
+        class="btn btn-dashboard"
+        (click)="modalService.open()">+</button>
+    </div>
     <app-board-item></app-board-item>
     <app-board-item></app-board-item>
     <app-board-item></app-board-item>
