--- a/src/app/board-page/board-page.component.html
+++ b/src/app/board-page/board-page.component.html
@@ -104,5 +104,5 @@
 <app-modal-board 
 title="Create board"
 *ngIf="modalService.isVisiBle$ | async">
-    <app-create-board></app-create-board>
+    <app-create-task></app-create-task>
 </app-modal-board>
