create-task component

--- a/src/app/board-page/board-page.component.html
+++ b/src/app/board-page/board-page.component.html
@@ -102,7 +102,7 @@
 </div>
 
 <app-modal-board 
-title="Create board"
+title="Create task"
 *ngIf="modalService.isVisiBle$ | async">
     <app-create-task></app-create-task>
 </app-modal-board>
