--- a/src/app/create-task/create-task.component.html
+++ b/src/app/create-task/create-task.component.html
@@ -1,1 +1,30 @@
 <p>create-task works!</p>
+<form [formGroup]="form"
+(ngSubmit)="submit()">
+    <div class="form-control">
+        <label for="title"></label>
+        <input 
+        id="title" 
+        type="text" 
+        formControlName="title" 
+        placeholder="task name"
+        >
+    </div>
+    <small
+    class="error"
+    *ngIf="title.errors?.minlength && title.touched"
+    >Please fill title field width min length. Now {{ title.value.length }}
+    </small>
+
+    <button
+    type="submit"
+    class="btn modal-btn"
+
+    >Create task</button>
+<!-- 
+    <button
+    type="submit"
+    class="btn modal-btn"
+    [disabled]="form.invalid"
+    >Create board</button> -->
+</form>
