--- a/src/styles.scss
+++ b/src/styles.scss
@@ -51,10 +51,28 @@ a {
     background: transparent;
     border: none;
 	cursor: pointer;
+	
 }
 .active{
 	color: red;
 }
 .error{
 	color: red;
+}
+
+
+.header{
+    padding: 1.4em 0;
+    text-align: center;
+    background: #c9ced6;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    // border-bottom: 1px solid #8699b6;
+}
+.nav{
+    display: flex;
+    flex-direction: row;
+    gap: 40px;
 }
