--- a/src/app/admin/dashboard-page/dashboard-page.component.html
+++ b/src/app/admin/dashboard-page/dashboard-page.component.html
@@ -1,1 +1,14 @@
 <p>dashboard-page works!</p>
+<div class="dashboard">
+    <div class="add-dashboard">
+        <button 
+        class="btn btn-dashboard"
+        (click)="modalService.open()">+</button>
+    </div>
+    <!-- <app-modal-board 
+    title="Create board"
+    *ngIf="modalService.isVisiBle$ | async">
+        <app-create-board></app-create-board>
+    </app-modal-board> -->
+</div>
+<app-create-board></app-create-board>
