--- a/src/app/admin/board-page/board-page.component.html
+++ b/src/app/admin/board-page/board-page.component.html
@@ -101,8 +101,8 @@
     </div>
 </div>
 
-<app-modal-board 
+<!-- <app-modal-board 
 title="Create task"
 *ngIf="modalService.isVisiBle$ | async">
     <app-create-task></app-create-task>
-</app-modal-board>
+</app-modal-board> -->
