--- a/src/app/admin/dashboard-page/dashboard-page.component.html
+++ b/src/app/admin/dashboard-page/dashboard-page.component.html
@@ -5,10 +5,14 @@
         class="btn btn-dashboard"
         (click)="modalService.open()">+</button>
     </div>
-    <!-- <app-modal-board 
+
+    <app-board-item></app-board-item>
+    <app-board-item></app-board-item>
+    <app-board-item></app-board-item>
+
+    <app-modal-board 
     title="Create board"
     *ngIf="modalService.isVisiBle$ | async">
         <app-create-board></app-create-board>
-    </app-modal-board> -->
+    </app-modal-board>
 </div>
-<app-create-board></app-create-board>
