admin layout: dashboard, board, create board, create task. home-page,board-page

--- a/src/app/admin/shared/components/admin-layout/admin-layout.component.html
+++ b/src/app/admin/shared/components/admin-layout/admin-layout.component.html
@@ -6,7 +6,7 @@
                 <a [routerLink]="['/admin','dashboard']">Home-Admin</a>
             </li>
             <li routerLinkActive="active">
-                <a href="/board/12">Link</a>
+                <a [routerLink]="['/admin','board','145']">Some board</a>
             </li>
             <li><a href="#" (click)="logout($event)">Logout</a></li>
         </ul>
