--- a/src/app/board-page/board-page.component.html
+++ b/src/app/board-page/board-page.component.html
@@ -3,10 +3,10 @@
     <div class="board-item">
         <h3 class="block-title">todo</h3>
         <div class="block">
-            <button 
+            <!-- <button 
             class="add-task-btn btn"
             (click)="modalService.open()"
-            >+</button>
+            >+</button> -->
             <div class="task">
                 <h3 class="task-title">Name</h3>  
                 <div class="task-btns">
@@ -36,10 +36,10 @@
     <div class="board-item">
         <h3 class="block-title">in progress</h3>
         <div class="block">
-            <button 
+            <!-- <button 
             class="add-task-btn btn"
             (click)="modalService.open()"
-            >+</button>
+            >+</button> -->
             <div class="task">
                 <h3 class="task-title">Name</h3>  
                 <div class="task-btns">
@@ -85,10 +85,10 @@
     <div class="board-item">
         <h3 class="block-title">done</h3>
         <div class="block">
-            <button 
+            <!-- <button 
             class="add-task-btn btn"
             (click)="modalService.open()"
-            >+</button>
+            >+</button> -->
             <div class="task">
                 <h3 class="task-title">Name</h3>  
                 <div class="task-btns">
@@ -101,8 +101,8 @@
     </div>
 </div>
 
-<app-modal-board 
+<!-- <app-modal-board 
 title="Create task"
 *ngIf="modalService.isVisiBle$ | async">
     <app-create-task></app-create-task>
-</app-modal-board>
+</app-modal-board> -->
