admin layout: dashboard, board, create board, create task. home-page,board-page

--- a/src/app/admin/create-board/create-board.component.html
+++ b/src/app/admin/create-board/create-board.component.html
@@ -9,6 +9,15 @@
         placeholder="board name"
         >
     </div>
+    <div class="form-control">
+        <label for="description"></label>
+        <input 
+        id="description" 
+        type="text" 
+        formControlName="description" 
+        placeholder="description"
+        >
+    </div>
     <small
     class="error"
     *ngIf="title.errors?.minlength && title.touched"
