admin layout: dashboard, board, create board, create task. home-page,board-page

--- a/src/app/admin/board-page/board-page.component.html
+++ b/src/app/admin/board-page/board-page.component.html
@@ -1,4 +1,5 @@
 <h1>Board Name</h1>
+<a href="#">DELETE BOARD</a>
 <div class="board-container">
     <div class="board-item">
         <h3 class="block-title">todo</h3>
