--- a/src/app/shared/components/main-layout/main-layout.component.html
+++ b/src/app/shared/components/main-layout/main-layout.component.html
@@ -2,11 +2,11 @@
     <h1>Angular Dashboard</h1>
     <nav>
         <ul class="nav">
-            <li routerLinkActive="active">
-                <a routerLink="/">Home</a>
+            <li>
+                <a routerLinkActive="active"  routerLink="/">Home</a>
             </li>
-            <li routerLinkActive="active">
-                <a href="/board/12">Link</a>
+            <li>
+                <a routerLinkActive="active"  href="/board/12">Link</a>
             </li>
             <li><a href="#">Link</a></li>
         </ul>
