admin layout: dashboard, board, create board, create task. home-page,board-page

--- a/src/app/admin/login-page/login-page.component.html
+++ b/src/app/admin/login-page/login-page.component.html
@@ -1,1 +1,20 @@
 <p>login-page works!</p>
+<form class="">
+    <h2>Log in</h2>
+    <div class="form-control">
+        <label for="email">Email</label>
+        <input type="email">
+    </div>
+    <small> error </small>
+
+    <div class="form-control">
+        <label for="password">Password</label>
+        <input type="password">
+    </div>
+    <small> error </small>
+
+    <button 
+    type="submit"
+    class="btn form-btn"
+    > Log in</button>
+</form>
