--- a/src/styles.scss
+++ b/src/styles.scss
@@ -76,3 +76,9 @@ a {
     flex-direction: row;
     gap: 40px;
 }
+.form-btn{
+    display: block;
+    height: 3rem;
+    border-radius: 0.5rem;
+    background: #d1e0ee;
+}
