admin layout: dashboard, board, create board, create task. home-page,board-page

--- a/src/app/admin/login-page/login-page.component.html
+++ b/src/app/admin/login-page/login-page.component.html
@@ -1,17 +1,22 @@
 <p>login-page works!</p>
-<form class="">
+<form class="form">
     <h2>Log in</h2>
     <div class="form-control">
         <label for="email">Email</label>
         <input type="email">
     </div>
-    <small> error </small>
+    <div class="validation">
+        <small> error </small>
+    </div>
+
 
     <div class="form-control">
         <label for="password">Password</label>
         <input type="password">
     </div>
-    <small> error </small>
+    <div class="validation">
+        <small> error </small>
+    </div>
 
     <button 
     type="submit"
