--- a/src/app/admin/login-page/login-page.component.scss
+++ b/src/app/admin/login-page/login-page.component.scss
@@ -2,6 +2,33 @@
     width: 100%;
 }
 form{
+    border-radius: 1rem;
+    box-shadow: -9px -8px 23px 0px white, 8px 1px 10px 0px grey; 
     margin: 0 auto;
     width: 50%;
+    display: flex;
+    flex-direction: column;
+    padding: 3rem;
+
+
+   .form-control{
+        display: flex;
+        flex-direction: column;
+        gap: 0.8rem;
+
+        input{
+            height: 40px;
+            width: 100%;
+            border: 1px solid #81afda;
+            border-radius: 0.4rem;
+            padding-left: 1rem;
+            margin-bottom: 0.1rem;
+        }
+    
+    }
+
+    .validation{
+        margin-bottom: 1.4rem;
+    }
+    
 }
