--- a/src/app/admin/login-page/login-page.component.html
+++ b/src/app/admin/login-page/login-page.component.html
@@ -49,6 +49,6 @@
     <button 
     type="submit"
     class="btn form-btn"
-    [disabled]="!form.valid"
+    [disabled]="!form.valid || form.disabled"
     > Log in</button>
 </form>
