--- a/src/app/admin/login-page/login-page.component.html
+++ b/src/app/admin/login-page/login-page.component.html
@@ -1,6 +1,11 @@
 <p>login-page works!</p>
 <form class="form" [formGroup]="form" (ngSubmit)="submit()">
     <h2>Log in</h2>
+    <div 
+    class="alert alert-danger"
+    *ngIf="auth.error$ | async as error"
+    >{{ error }}
+    </div>
 
     <div 
     class="form-control"
