--- a/src/app/admin/login-page/login-page.component.scss
+++ b/src/app/admin/login-page/login-page.component.scss
@@ -6,8 +6,8 @@ form{
     box-shadow: -9px -8px 23px 0px white, 8px 1px 10px 0px grey; 
     margin: 0 auto;
     width: 50%;
-    display: flex;
-    flex-direction: column;
+    // display: flex;
+    // flex-direction: column;
     padding: 3rem;
     display: flex;
     flex-direction: column;
