--- a/src/app/admin/shared/components/board-item/board-item.component.html
+++ b/src/app/admin/shared/components/board-item/board-item.component.html
@@ -1,6 +1,7 @@
 <div class="card">
     <div class="card-header">
         <h2>Board name</h2>   
+        <p>Description</p>
         <small>04/11/2022</small>
      </div>
      <div>
