--- a/src/app/admin/dashboard-page/dashboard-page.component.html
+++ b/src/app/admin/dashboard-page/dashboard-page.component.html
@@ -8,25 +8,20 @@
 
 
     <div class="card"
-    *ngIf="let board of boards">
+    *ngFor="let board of boards">
         <div class="card-header">
-            <h2>{{ board }}</h2>   
-            <p>Description</p>
-            <small>04/11/2022</small>
+            <h2>{{ board.name }}</h2>   
+            <p>{{ board.description}}</p>
+            <small>{{ board.date | date:'medium'}}</small>
          </div>
          <div>
-            <small> Olena </small>
+            <small> {{ board.author}} </small>
          </div>
          <button
          [routerLink]="['/board', 12]"
          class="btn btn-dark"
          >Оpen</button>
     </div>
-
-
-    <app-board-item></app-board-item>
-    <app-board-item></app-board-item>
-    <app-board-item></app-board-item>
 
     <app-modal-board 
     title="Create board"
