--- a/src/app/admin/dashboard-page/dashboard-page.component.scss
+++ b/src/app/admin/dashboard-page/dashboard-page.component.scss
@@ -7,21 +7,45 @@
     margin: 0 auto;
     height: 800px;
     padding-top: 5rem;
-}
-.add-dashboard{
-    width: 20rem;
-    height: 20rem;
-    align-items: center;
-    display: flex;
-    
-    .btn-dashboard{
-        font-size: 10rem;
-        width: 80%;
-        height: 80%;
-        margin: 0 auto;
+
+    .add-dashboard{
+        width: 20rem;
+        height: 20rem;
+        align-items: center;
+        display: flex;
+        
+        .btn-dashboard{
+            font-size: 10rem;
+            width: 80%;
+            height: 80%;
+            margin: 0 auto;
+            color: #8c9094;
+            border-radius: 1rem;
+            box-shadow: -9px -8px 23px 0px white, 8px 1px 10px 0px grey;  
+            &:hover{
+                background-color: #c4d7dc;
+                transition: background-color 0.5s ease;
+            }
+            &:active{
+                background-color: #c49bfa;
+                transition: background-color 0.5s ease;
+            } 
+        }
+    }
+    .card{
+        display: flex;
+        flex-direction: column;
+        width: 20rem;
+        height: 20rem;
+        background-color: #ebf1fa;
         color: #8c9094;
         border-radius: 1rem;
-        box-shadow: -9px -8px 23px 0px white, 8px 1px 10px 0px grey;  
+        justify-content: space-around;
+        padding: 1rem;
+        cursor: pointer;
+        border-color: #fff;
+        // box-shadow: 0 0 10px rgb(0 0 0 / 50%);
+        box-shadow: -9px -8px 23px 0px white, 8px 1px 10px 0px grey;
         &:hover{
             background-color: #c4d7dc;
             transition: background-color 0.5s ease;
@@ -29,6 +53,6 @@
         &:active{
             background-color: #c49bfa;
             transition: background-color 0.5s ease;
-        } 
+        }
     }
 }
