--- a/src/app/admin/board-page/board-page.component.html
+++ b/src/app/admin/board-page/board-page.component.html
@@ -9,7 +9,7 @@
             (click)="modalService.open()"
             >+</button>
             <div class="task">
-                <h3 class="task-title">Name</h3>  
+                <h3 class="task-title">Name &#10006;</h3>  
                 <div class="task-btns">
                     <button class="edit-btn btn">&#9998;</button>
                     <button class="delete-btn btn">&#8864;</button>
