--- a/src/app/admin/dashboard-page/dashboard-page.component.html
+++ b/src/app/admin/dashboard-page/dashboard-page.component.html
@@ -12,7 +12,6 @@
             (click)="modalService.open()">+</button>
         </div>
 
-        <!-- [routerLink]="['/admin','board', board.id]" -->
         <div class="card"
         *ngFor="let board of boards | searchPipe:searchStr">
             <div class="card-header" [routerLink]="['/admin','board', board.id]" >
@@ -23,6 +22,9 @@
             <div>
                 <small> {{ board.author}} </small>
             </div>
+            <a class="btn-board btn-edit"
+            (click)="modalService.open()"
+            >&#x2710;</a>
             <a class="btn-board"
             (click)="remove(board.id)">&#10006;</a>
         </div>
@@ -30,8 +32,18 @@
         <app-modal-board 
         title="Create board"
         *ngIf="modalService.isVisiBle$ | async">
-            <app-create-board></app-create-board>
+            <!-- <app-create-board></app-create-board> -->
+            <app-edit-board></app-edit-board>
         </app-modal-board>
+
+
+        <!-- <app-modal-board 
+        title="Edit board"
+        *ngIf="modalService.isVisiBle$ | async"
+        [ngSwitch]="action">
+            <app-create-board *ngSwitchCase="'create'"></app-create-board>
+            <app-edit-board *ngSwitchCase="'edit'"></app-edit-board>
+        </app-modal-board> -->
     </div>
 </div>
 
