--- a/src/app/admin/dashboard-page/dashboard-page.component.html
+++ b/src/app/admin/dashboard-page/dashboard-page.component.html
@@ -9,7 +9,7 @@
         <div class="add-dashboard">
             <button 
             class="btn btn-dashboard"
-            (click)="modalService.open()">+</button>
+            (click)="addOption() ;modalService.open()">+</button>
         </div>
 
         <div class="card"
@@ -22,28 +22,21 @@
             <div>
                 <small> {{ board.author}} </small>
             </div>
-            <a class="btn-board btn-edit"
-            (click)="modalService.open()"
+            <a class="btn-board btn-edit" 
+            (click)="edit(board.id); modalService.open()"
             >&#x2710;</a>
             <a class="btn-board"
             (click)="remove(board.id)">&#10006;</a>
         </div>
 
+
         <app-modal-board 
-        title="Create board"
-        *ngIf="modalService.isVisiBle$ | async">
-            <!-- <app-create-board></app-create-board> -->
-            <app-edit-board></app-edit-board>
-        </app-modal-board>
-
-
-        <!-- <app-modal-board 
-        title="Edit board"
+        title="board"
         *ngIf="modalService.isVisiBle$ | async"
         [ngSwitch]="action">
             <app-create-board *ngSwitchCase="'create'"></app-create-board>
             <app-edit-board *ngSwitchCase="'edit'"></app-edit-board>
-        </app-modal-board> -->
+        </app-modal-board>
     </div>
 </div>
 
