modal- switch, create board - reload, home page

--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,9 +1,15 @@
-<div class="dashboard">   
+<div class="dashboard"
+*ngIf="boards$ | async as boards">   
 
     
-    <app-board-item></app-board-item>
-    <app-board-item></app-board-item>
-    <app-board-item></app-board-item>
+    <app-board-item
+    *ngFor="let board of boards"
+    [board] = "board"
+    >
+    </app-board-item>
 
 
 </div>
+<ng-template #loading>
+
+</ng-template>
