--- a/src/app/admin/edit-board/edit-board.component.html
+++ b/src/app/admin/edit-board/edit-board.component.html
@@ -10,8 +10,7 @@
         type="text" 
         formControlName="title" 
         placeholder="board name"
-
-        >
+        > {{ boardItem.name}}
     </div>
 
     <small
@@ -29,7 +28,7 @@
         type="text" 
         formControlName="description" 
         placeholder="description"
-        >
+        > {{ boardItem.description}}
     </div>
 
     <small
