--- a/src/app/admin/board-page/board-page.component.html
+++ b/src/app/admin/board-page/board-page.component.html
@@ -9,7 +9,7 @@
             (click)="modalService.open()"
             >+</button>
             <div class="task"
-            *ngFor="let task of tasks">
+            *ngFor="let task of tasks | statusPipe:'todo'">
                 <h3 class="task-title">{{ task.name }}</h3>  
                 <div class="task-btns">
                     <button class="edit-btn btn">&#9998;</button>
@@ -19,10 +19,7 @@
             </div>
         </div>
     </div>
-    <div 
-
-    class="board-item"
-    >
+    <div class="board-item">
         <h3 class="block-title">in progress</h3>
         <div class="block">
             <button 
@@ -30,7 +27,7 @@
             (click)="modalService.open()"
             >+</button>
             <div class="task"
-            *ngFor="let task of tasks">
+            *ngFor="let task of tasks | statusPipe:'in progress'">
                 <h3 class="task-title">{{ task.name }}</h3>  
                 <div class="task-btns">
                     <button class="edit-btn btn">&#9998;</button>
@@ -48,7 +45,7 @@
             (click)="modalService.open()"
             >+</button>
             <div class="task"
-            *ngFor="let task of tasks">
+            *ngFor="let task of tasks | statusPipe:'done' ">
                 <h3 class="task-title">{{ task.name }}</h3>  
                 <div class="task-btns">
                     <button class="edit-btn btn">&#9998;</button>
